[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2018"
rust-version = "1.40.0"
authors = ["uzybzk"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }